// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-links Renders \`alarm-column-value-links\` with custom props 1`] = `
<div
  class="v-list links-list transparent pa-0 v-list--dense theme--light"
  role="list"
>
  <category-links-stub
    label="Custom label"
    links="[object Object]"
  />
</div>
`;

exports[`alarm-column-value-links Renders \`alarm-column-value-links\` with default props 1`] = `
<div
  class="v-list links-list transparent pa-0 v-list--dense theme--light"
  role="list"
>
  <category-links-stub
    links=""
  />
</div>
`;
